objects/SLSI__Intranet_App__c.object
<CustomObject>
    <fields>
        <fullName>SLSI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Departments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Departments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__For_All_Offices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For All Offices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLSI__IntranetApp_Departments__c</fullName>
        <label>IntranetApp Departments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__IntranetApp_Offices__c</fullName>
        <label>IntranetApp Offices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Departments__c</fullName>
        <formula>IF( SLSI__For_All_Departments__c , 'Notifications can only be published to particular departments if they are not intended to all departments i.e. for All Departments field is unchecked.', HYPERLINK('apex/SLSI__SL_IntranetDepartmentLookup?id='+ Id , 'Click to select departments' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Departments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Select_Offices__c</fullName>
        <formula>IF( SLSI__For_All_Offices__c , 'Notifications can only be published to particular offices if they are not intended to all offices i.e. for All Offices field is unchecked.', HYPERLINK('apex/SLSI__SL_IntranetOfficeLookup?id='+ Id , 'Click to select offices' , '_self') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Select Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Department_Ids__c</fullName>
        <label>Selected Department Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__Selected_Office_Ids__c</fullName>
        <label>Selected Office Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLSI__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Intranet App</label>
    <listViews>
        <fullName>SLSI__All</fullName>
        <columns>NAME</columns>
        <columns>SLSI__Active__c</columns>
        <columns>SLSI__URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLSI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Intranet App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>